<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_active"
        android:title="@string/action_home" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/action_favorite" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/action_profile" />
</menu>