<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.terms.TermsOfServicesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_terms_of_services"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/cd_backto_settings"
            android:src="@drawable/icon_left_arrow"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tos_text"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_terms_of_services">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/tos_1" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_2" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_3" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_4" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_5" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_6" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_7" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_8" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_9" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_10" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_11" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_12" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_13" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_14" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_15" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/tos_16" />

            <TextView
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="30dp"
                android:text="@string/tos_17" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>