<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_icon_bag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_welcome_bag" />

    <TextView
        android:id="@+id/tv_welcome_title_text"
        style="@style/TextView.ExtraLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_bag" />

    <TextView
        android:id="@+id/tv_welcome_subtitle_text"
        style="@style/TextView.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:maxLines="2"
        android:text="@string/welomce_subtitle_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title_text" />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="15dp"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_subtitle_text" />

    <Button
        android:id="@+id/start_register_button"
        style="@style/Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="15dp"
        android:text="@string/welcome_register_text"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_login_button" />

    <TextView
        android:id="@+id/tv_conditions"
        style="@style/TextView.ExtraSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="12dp"
        android:text="@string/welcome_conditions_text"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_register_button" />
</androidx.constraintlayout.widget.ConstraintLayout>